feat: cache clients for at least 30 minutes